[package]
name = "nes-lib"
version = "0.1.0"
authors = ["Jay <janlely@163.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/janlely/nes-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.73"}
num-traits = "0.2"
num-derive = "0.3"
pretty_env_logger = "0.4.0"
log = "0.4.11"
num = "0.2"
anyhow = "1.0.39"
lazy_static = "1.4.0"
